# cql

./: .env.example  .gitignore  .jekyllignore  .liquid-linter.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  FULL_LLM  META_PROMPT_COMPILER_FEASIBILITY_ANALYSIS.md  META_PROMPT_COMPILER_ROADMAP.md  README.md  REDUCE_TOKENS  _config.yml  local.txt  process_llm_files.sh  remote.txt  requeste_test.txt  test_query.cql  test_query.llm  version-tool
.githooks/: README.md  pre-commit
demo/: README.md  benchmark_optimization.py  run_demo.sh  verify_demo.sh
docs/: AILIB_INTEGRATION_GUIDE.md  ARCHITECTURE_REVIEW.md  CLAUDE_CPP_ANALYSIS.md  CQL_AILIB_DESIGN_SPECIFICATION.md  CQL_API_INFRASTRUCTURE_ANALYSIS.md  CQL_HONEST_EVALUATION.md  MESSAGE_FORMATTING.md  OPEN_SOURCE_READINESS.md  README.md  README_main.md  SECURITY.md  TECHNICAL_SPECIFICATION_META_PROMPT_COMPILER.md  api_client_specification.md  api_documentation.md  api_integration_roadmap.md  architecture_patterns.md  build_optimizations.md  claude_api_integration_plan.md  cli_integration_example.md  (+10 more)
examples/examples-generated/distributed_task_scheduler/: CMakeLists.txt  README.md  bug_report.txt  build-script.sh  clang-format  distributed_task_scheduler.txt  doxyfile  main.cpp  query.txt  run_specific_test.sh  vscode-config.json
examples/examples-generated/distributed_task_scheduler/include/: jwt_traits_adapter.hpp  message_queue.hpp  scheduler_core.hpp  security_manager.hpp  worker_node.hpp
examples/examples-generated/distributed_task_scheduler/src/: message_queue.cpp  scheduler_implementation.cpp  security_implementation.cpp  worker_implementation.cpp
examples/examples-generated/distributed_task_scheduler/tests/: tests.cpp
examples/examples-generated/query-test/: CMakeLists.txt  Doxyfile  README.md  cmake_readme_update.md  query.txt
examples/examples-generated/query-test/docs/html/: abstract__factory_8cpp.html  abstract__factory_8cpp__incl.dot  abstract__factory_8cpp_source.html  abstract__factory_8h.html  abstract__factory_8h.js  abstract__factory_8h__dep__incl.dot  abstract__factory_8h__incl.dot  abstract__factory_8h_source.html  annotated.html  annotated_dup.js  class_abstract_factory_test-members.html  class_abstract_factory_test.html  class_abstract_factory_test.js  class_abstract_factory_test__coll__graph.dot  class_abstract_factory_test_a376e402649e90ba915921c0af4a0403f_cgraph.dot  class_builder_test-members.html  class_builder_test.html  class_builder_test.js  class_builder_test__coll__graph.dot  class_builder_test__inherit__graph.dot  class_builder_test_a2eb75bb950790a308236a89ed6ca1afb_cgraph.dot  class_factory_method_test-members.html  class_factory_method_test.html  class_factory_method_test.js  class_factory_method_test__inherit__graph.dot  class_observer_test-members.html  class_observer_test.html  class_observer_test.js  class_observer_test__inherit__graph.dot  class_observer_test_ab22192ebbb8dc2e7d6f29635108b803a_cgraph.dot  class_singleton_test-members.html  class_singleton_test.html  class_singleton_test.js  class_singleton_test__inherit__graph.dot  class_singleton_test_abdfcfbc37d64d2dbc290b48d5ccca045_cgraph.dot  class_strategy_test-members.html  class_strategy_test.html  class_strategy_test.js  class_strategy_test__inherit__graph.dot  class_strategy_test_a86adc8a45229e984936c1bb99605168a_cgraph.dot  (+470 more)
examples/examples-generated/query-test/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enumvalues_0.js  (+50 more)
examples/examples-generated/query-test/headers/: abstract_factory.h  concrete_documents.h  concrete_tools.h  document_builder.h  document_factory.h  document_manager.h  document_observer.h  document_strategy.h  document_types.h  message_queue.h
examples/examples-generated/query-test/src/: abstract_factory.cpp  document_system_example.cpp  document_system_impl.cpp  test_abstract_factory.cpp  test_builder.cpp  test_factory.cpp  test_observer.cpp  test_singleton.cpp  test_strategy.cpp
lib/ailib/: CMakeLists.txt
lib/ailib/include/ailib/: ailib.hpp
lib/ailib/include/ailib/auth/: secure_store.hpp
lib/ailib/include/ailib/core/: config.hpp
lib/ailib/include/ailib/detail/: json_utils.hpp
lib/ailib/include/ailib/http/: client.hpp
lib/ailib/include/ailib/providers/: anthropic.hpp  factory.hpp  openai.hpp
lib/ailib/src/: config.cpp  json_utils.cpp
lib/ailib/src/auth/: secure_store.cpp
lib/ailib/src/http/: curl_client.cpp
lib/ailib/src/providers/: anthropic.cpp  factory.cpp  openai.cpp
lib/ailib/tests/: test_anthropic_provider.cpp  test_config_enhanced.cpp  test_http_client.cpp  test_openai_provider.cpp
odds-and-ends/cql/: CHANGES.md  CLAUDE.md  CMakeLists.txt  PHASE3_FEATURES.md  README.md
odds-and-ends/cql/docs/: api_documentation.md  architecture_patterns.md  index.md  quick_reference.md  real_world_examples.md  template_documentation.md  troubleshooting.md  tutorial.md  visual_guide.md
odds-and-ends/cql/examples/: README.md  base_data_structure.cql  behavioral_patterns.cql  creational_patterns.cql  phase2_example.md
odds-and-ends/cql/include/cql/: compiler.hpp  cql.hpp  lexer.hpp  nodes.hpp  parser.hpp  pattern_compatibility.hpp  template_manager.hpp  template_validator.hpp  template_validator_schema.hpp  validator.hpp  visitor.hpp
odds-and-ends/cql/src/: cql.cpp
odds-and-ends/cql/src/cql/: cli.cpp  compiler.cpp  lexer.cpp  main.cpp  nodes.cpp  parser.cpp  pattern_compatibility.cpp  project_utils.cpp  template_manager.cpp  template_validator.cpp  template_validator_schema.cpp  test_architecture_patterns.cpp  tests.cpp  util.cpp  validator.cpp
odds-and-ends/cql/src/examples/: test_variables.cpp
odds-and-ends/cql/summary/: changes.md
(+616 files in other folders)
